Finally changed the navBar media queries to the appropriate settings- li elements no longer break at smaller screen widths; simply had to add a media query to change the width back to 100%

--- a/css/queries.css
+++ b/css/queries.css
@@ -38,4 +38,8 @@
 	nav ul li a {display: block; padding-left: 0; }
 	nav ul li:last-child { border: none; }
 	.indicator { display: inline-block; position: absolute; right: 0 !important; }
-} 
+}
+
+@media screen and (max-width: 560px) {
+	.top-nav { width: 100%;} }
+}
